API Testing Agent and more enhancements (#3)
feat: Add API Test Execution Agent and refactor core for multi-agent support

Introduces a new API Test Execution Agent module for automated API testing
via LLM-driven orchestration, and refactors the core module to provide
shared infrastructure for multiple agent types.

NEW MODULE: api_test_execution_agent
- ApiTestAgent: Main entry point for API test execution
- ApiPreconditionActionAgent & ApiTestStepActionAgent: Specialized AI agents
- ApiRequestTools: HTTP requests with Basic/Bearer/API Key authentication
- ApiAssertionTools: JSON Schema and OpenAPI validation
- ApiContext: Session/cookie management across requests
- ApiTestAgentConfig: API-specific configuration properties
- Cloud Run deployment configuration (Dockerfile, cloudbuild.yaml)

CORE REFACTORING:
- Add AbstractServer base class for common HTTP server initialization
- Add AbstractAgentExecutor base class for agent execution lifecycle
- Add DefaultToolErrorHandler for centralized error handling
- Add TestCaseExtractor utility (shared test case parsing)
- Add TestContextDataTools (JSON/CSV data loading)
- Add LogCapture utility for execution log capture
- Add SystemInfo DTO for device/OS/browser info in results
- Rename AgentExecutionResult → OperationExecutionResult (simplified)
- Rename CoreUtils → CommonUtils
- Remove BaseAiAgent interface (use GenericAiAgent directly)
- Simplify RetryPolicy (remove exponential backoff)
- Simplify FinalResult interface (remove recursive generic)

UI AGENT REFACTORING:
- Rename Agent.java → UiTestAgent.java
- Create UiTestAgentConfig for UI-specific settings
- Create UiTestExecutionContext with visual state management
- Move RAG classes to UI module (RetrieverFactory, ChromaRetriever)
- Move VisualState to UI module
- Server now extends AbstractServer

CONFIGURATION CHANGES:
- Default model: gemini-2.5-flash → gemini-3-flash-preview
- Add gemini.thinking.level configuration
- Add verification.model.max.retries
- Unify too